small spacing fix

--- a/src/components/games/gameRow/row.module.css
+++ b/src/components/games/gameRow/row.module.css
@@ -9,6 +9,9 @@
 .gameRow button,
 .gameRow a{
     font-size: small;
+}
+
+.gameRow p{
     width: 25%;
 }
 
